--- a/index.html
+++ b/index.html
@@ -327,22 +327,22 @@
 <div class="patient_info">
 <div><em>Անուն / Имя<br>
 <strong>Given Name</strong></em></div>
-<div><strong>ՌԱՅԱ<br>RAYA</strong></div>
+<div><strong>ՏԻԳՐԱՆ<br>BADALYAN</strong></div>
 </div>
 <div class="patient_info">
 <div><em>Ազգանուն <br>
 <strong>Surname</strong> / Фамилия</em></div>
-<div><strong>ԲԱԲԱՅԱՆ<br>BABAYAN</strong></div>
+<div><strong>ԲԱԴԱԼՅԱՆ<br>BADALYAN</strong></div>
 </div>
 <div class="patient_info">
 <div><em>Ծննդյան ամսաթիվ<br>
 <strong>Date of Birth</strong> / Дата рождения</em></div>
-<div><strong>22/01/1993</strong></div>
+<div><strong>31/01/1994</strong></div>
 </div>
 <div class="patient_info">
 <div><em>Անձնագրի / Նույն. քարտի համարը<br>
 <strong>Passport / ID No</strong> / Номер паспорта / ИК</em></div>
-<div><strong>AU0481860</strong></div>
+<div><strong>AT0440346</strong></div>
 </div>
 </div>
 </div>
