--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
 <div class="patient_info">
 <div><em>Ծննդյան ամսաթիվ<br>
 <strong>Date of Birth</strong> / Дата рождения</em></div>
-<div><strong>31/01/1994</strong></div>
+<div><strong>31/**/****</strong></div>
 </div>
 <div class="patient_info">
 <div><em>Անձնագրի / Նույն. քարտի համարը<br>
 <strong>Passport / ID No</strong> / Номер паспорта / ИК</em></div>
-<div><strong>AT0440346</strong></div>
+<div><strong>*****0346</strong></div>
 </div>
 </div>
 </div>
